# discussion-support

./: .env.example  .gitignore  README.md  pyproject.toml
data/docs/: bioplastic_overview.md  cafeteria_cost_structure.md  plastic_waste_statistics.md  x_university_case_study.md
data/docs_policy/: academic_integrity_concerns.md  ai_pedagogy_effect_study.md  staged_introduction_guidelines.md  tuition_value_perspective.md
data/eval/eval-20260501T082055Z/: meta.json  summary.json
data/eval/smoke/: meta.json  summary.json
docs/: RESEARCH.md  progress_review.md
src/das/: __init__.py  __main__.py  cli.py  logging.py  settings.py  types.py
src/das/agents/: __init__.py  base.py  consensus_agent.py  document.py  extraction.py  facilitation.py  linking.py  web_search.py
src/das/asr/: __init__.py  engine.py  mic.py  session.py
src/das/eval/: __init__.py  citation.py  conditions.py  consensus.py  controller.py  judge.py  metrics.py  persona.py  presets.py  run_eval.py  structural_metrics.py
src/das/graph/: __init__.py  ops.py  schema.py
src/das/llm/: __init__.py  openai_client.py
src/das/presentation/: __init__.py  retrospective.py  (+1 more)
tests/: conftest.py
tests/fixtures/: cafeteria_transcript.jsonl
tests/integration/: test_e2e_smoke.py
tests/unit/: test_bus.py  test_citation.py  test_conditions.py  test_consensus.py  test_consensus_agent.py  test_document.py  test_extraction.py  test_facilitation.py  test_graph_store.py  test_judge.py  test_linking.py  test_metrics.py  test_openai_client.py  test_orchestrator.py  test_persona.py  test_presentation.py  test_run_eval.py  test_session_runner.py  test_smoke.py  test_streamlit_app.py  test_structural_metrics.py  test_viz_render.py  test_web_search.py
(+58 files in other folders)
