[project]
name = "discussion-support"
version = "0.1.0"
description = "Multi-agent argumentation-graph–integrated discussion support"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rei Matsui" }]
license = { text = "MIT" }
dependencies = [
    "openai>=1.50.0",
    "networkx>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "tiktoken>=0.7",
    "typer>=0.12",
    "structlog>=24.1",
    "rich>=13.7",
    "anyio>=4.4",
]

[project.optional-dependencies]
viz = [
    "pyvis>=0.3.2",
    "matplotlib>=3.8",
]
web = [
    "tavily-python>=0.5",
]

[project.scripts]
das = "das.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "respx>=0.21",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "das"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer は引数デフォルトで typer.Argument / typer.Option を使うのが慣用
"src/das/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: end-to-end tests that may call OpenAI",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
